--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <nav>
             <span>
-                <img src="/Projects/NetflixClone/Assets/Image/NetflixLogo.svg" width="83px">
+                <img src="Assets/Image/NetflixLogo.svg" width="83px">
             </span>
             <div>
                 <button class="btn">English</button>
@@ -42,14 +42,14 @@
             Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more
         </div>
         <div class="1 secimg">
-            <img src="/Projects/NetflixClone/Assets/Image/Bossbaby.jpg" >
+            <img src="Assets/Image/Bossbaby.jpg" >
          </div>
     </section>
 
     <div class="2 sepration"></div>
     <section class="2 first">
         <div class="2 secimg">
-            <img src="/Projects/NetflixClone/Assets/Image/omg2.jpg" >
+            <img src="Assets/Image/omg2.jpg" >
         </div>
         <div>
             Download your shows to watch offline
@@ -64,14 +64,14 @@
             Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.
         </div>
         <div class="3 secimg">
-            <img src="/Projects/NetflixClone/Assets/Image/animal.jpg" >
+            <img src="Assets/Image/animal.jpg" >
         </div>
     </section>
 
     <div class="4 sepration"></div>
     <section class="4 first">
         <div class="4 secimg">
-            <img src="/Projects/NetflixClone/Assets/Image/Bossbaby.jpg" >
+            <img src="Assets/Image/Bossbaby.jpg" >
         </div>
         <div>
             Create profiles for kids
